RESOLVED FIXED144421
[iOS] tapping in the middle of a word in editable content should not select the word.
https://bugs.webkit.org/show_bug.cgi?id=144421
Summary [iOS] tapping in the middle of a word in editable content should not select t...
Enrica Casucci
Reported 2015-04-29 17:26:13 PDT
We want to revert it to the original behavior. rdar://problem/20710948
Attachments
Patch (2.13 KB, patch)
2015-04-29 17:29 PDT, Enrica Casucci
thorton: review+
Enrica Casucci
Comment 1 2015-04-29 17:29:10 PDT
Tim Horton
Comment 2 2015-04-29 17:33:23 PDT
Comment on attachment 252013 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=252013&action=review > Source/WebKit2/ChangeLog:9 > + Reverting to the original behavior. original before a specific revision? > Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:969 > + result = wordRange->startPosition(); Can this range ever be null? I know Range likes to be null at inopportune times.
Enrica Casucci
Comment 3 2015-04-30 10:50:27 PDT
(In reply to comment #2) > Comment on attachment 252013 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=252013&action=review > > > Source/WebKit2/ChangeLog:9 > > + Reverting to the original behavior. > > original before a specific revision? > > > Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:969 > > + result = wordRange->startPosition(); > > Can this range ever be null? I know Range likes to be null at inopportune > times. Yes. I'll add a check. Thanks!
Enrica Casucci
Comment 4 2015-04-30 11:22:31 PDT
Committed revision 183635.
Note You need to log in before you can comment on or make changes to this bug.