[iOS] tapping in the middle of a word in editable content should not select the word. https://bugs.webkit.org/show_bug.cgi?id=144421 rdar://problem/20710948

Reviewed by Tim Horton.

Reverting to the original behavior.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::selectWithGesture):



Canonical link: https://commits.webkit.org/162473@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183635 268f45cc-cd09-0410-ab3c-d52691b4dbfc